# google-ads-ga4-mcp-gateway

google-ads-mcp-gateway/: README.md  pyproject.toml
google-ads-mcp-gateway/ads_mcp_gateway/: coordinator.py  ga4_tools.py  ga4_utils.py  mutate_tools.py  safety.py  server.py  tools.py  utils.py
google-ads-mcp-gateway/google_ads_mcp_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
google-ads-mcp-gateway/skills/: SKILL-google-ads-mcp-gateway-ads.md  SKILL-google-ads-mcp-gateway-ga4.md
