[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-ads-mcp-gateway"
version = "0.1.0"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "fastmcp>=3.2.0",
  "httpx>=0.28.1",
]

description = "Minimal multi-tenant Google Ads + GA4 MCP Gateway (REST-based)."
readme = "README.md"

[project.scripts]
google-ads-mcp-gateway = "ads_mcp_gateway.server:run_server"

# `skills/` lives next to `ads_mcp_gateway/` for Cursor/Astera docs only — it is not a
# Python package. Without this, setuptools flat-layout discovery errors with:
# "Multiple top-level packages discovered: ['skills', 'ads_mcp_gateway']".
[tool.setuptools.packages.find]
where = ["."]
include = ["ads_mcp_gateway*"]
exclude = ["skills*", "tests*", "test*"]

